# Seriously-Practical-Puerile-Protocol-in-Rust

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  t
certificates/: DO_NOT_USE.crt  DO_NOT_USE.key  README.md  client.crt  server.crt
certificates/CA/: bsclab21-root.pem  root.crt
src/: connection.rs  connection_interface.rs  connection_manager.rs  connection_reliability_sender.rs  connection_security.rs  constants.rs  cookie.rs  lib.rs  packet.rs
tests/: echo.rs  loadtest.rs
tests/realistic_network/: README.md  configure_interface.sh
